# leybot-rs

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
src/: http.rs  link.rs  main.rs  misc.rs
src/commands/: coupon.rs  forceroles.rs  gmodstore.rs  mod.rs  purchases.rs  roles.rs  steam.rs  unlink.rs
src/events/: member.rs
