[package]
name = "leybot"
version = "0.1.0"
repository = "https://github.com/LeySupport/discord-bot-rs"
authors = ["FelixKLG <felix@felixklg.dev>"]
edition = "2021"

[dependencies]
# Core
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.13.0", features = ["full"] }

# Utilities
dotenv = "0.15.0"
serde = { version = "1.0.147", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.4"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "model",
    "rustls_backend"
]