[package]
name = "leybot"
version = "0.1.0"
repository = "https://github.com/FelixKLG/leybot-rs"
authors = ["FelixKLG <felix@felixklg.dev>"]
edition = "2021"

[dependencies]
# Core
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dotenv = "0.15.0"
cuid = "1.2.0"

# Errors and Logging
log = "0.4"
pretty_env_logger = "0.4"
error-stack = "0.2.4"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "utils"
]